# mov2mp4

./: .env.example  .gitignore  LICENSE  README.md  main.py  mov2mp4_gui.py  mov2mp4_gui.spec  pyproject.toml
scripts/: mov2mp4_gui.py
src/mov2mp4/: __init__.py  __main__.py  cli.py  config.py  converter.py  gui.py  logging_config.py  opener.py  paths.py
tests/: test_cli_integration.py  test_cli_signals.py  test_config.py  test_converter.py  test_main_module.py  test_paths.py
