[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "mov2mp4"
version = "2.3.0"
description = "Batch MOV to MP4 converter with a ffmpeg backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0"
]

[project.scripts]
mov2mp4 = "mov2mp4.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.uv.build-backend]
module-name = "mov2mp4"
module-root = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
